TEST_PROGRAMS/INVALID/14/0303_expr_array_decl.go
package main

func main() {
  var x [1+4]int
  x[2] = 3
}
